[package]
name = "twostep"
version = "0.1.0"
authors = ["Daniel Corn <info@cundd.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug"]
std = []
debug = []
auto_trigger = []
test_adc = []


[dependencies]
#ruduino = "0.2"
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.2.2"
embedded-hal = "0.2.4"
smart-leds = "0.3.0"
#ws2812-timer-delay = {version = "0.3.0", features = ["slow"]}
smart-leds-trait = "0.2.1"
ws2812-spi = { version = "0.4.0", features = ["mosi_idle_high"] }

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "d17a441a667dd65e5a9be75b0e71d1beadf93e84"
# ^- Pin the dependency to a specific version.  You should use the latest
# commit hash from the avr-hal master branch.  You can find it here:
#
#    https://github.com/Rahix/avr-hal/commits/master

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
